--- a/views/group.pug
+++ b/views/group.pug
@@ -3,19 +3,23 @@ extends dashboard.pug
 block content 
   main(class="flex-grow p-6")
     div(class="flex items-center justify-between mb-4")
-      h1(class="text-2xl font-semibold text-gray-700 dark:text-white") Mes groupes
-      // Bouton "Créer une dépense"
+      h1(class="text-2xl font-semibold text-gray-700 dark:text-white") Mon groupe
       button(type="button" onclick="openPopup()" class="px-4 py-2 bg-blue-700 text-white rounded-md hover:bg-blue-600") Créer un nouveau groupe
-    h2(class="text-lg font-bold text-gray-700 dark:text-white mt-8") Groupes créés :
+    h2(class="text-lg font-bold text-gray-700 dark:text-white mt-8") Groupe auxquelles vous appartenez :
     if groups.length === 0
       p(class="text-gray-500") Aucun groupe trouvé.
     else
       each group in groups
         div(class="my-2 bg-gray-100 shadow-md rounded px-6 py-4 mb-4")
-          h3(class="text-xl font-bold text-gray-800")  #{group.name}
+          div(class="mt-2 flex justify-between")
+            h3(class="text-xl font-bold text-gray-800")  #{group.name}
+            form(action=`/dashboard/group/leave` method="post" class="inline")
+                button(type="submit" class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-500") Quitter le groupe
           ul(class="list-disc ml-6")
             each user in group.users
               li(class="text-gray-700 font-medium") #{user.prenom} #{user.nom}
+
+            
           h4(class="text-lg font-bold text-gray-800 mt-4") Dépenses du groupe :
           if group.expenses.length === 0
             p(class="text-gray-500") Aucune dépense pour ce groupe.
